--- a/requirements.txt
+++ b/requirements.txt
@@ -1,271 +1,28 @@
-ansi2html==1.9.1
-anyio==4.0.0
-appdirs==1.4.4
-apsw==3.36.0.post1
-apturl==0.5.2
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-async-lru==2.0.4
-attrs==23.2.0
-Babel==2.13.1
-backcall==0.2.0
-beautifulsoup4==4.10.0
-beniget==0.4.1
-bleach==6.1.0
-blinker==1.7.0
-Brlapi==0.8.3
-Brotli==1.0.9
-bs4==0.0.2
-build==1.1.1
-buildozer==1.5.1.dev0
-certifi==2024.6.2
-cffi==1.16.0
-chardet==4.0.0
-charset-normalizer==3.3.2
-chrome-gnome-shell==0.0.0
-click==8.1.7
-cloudpickle==3.0.0
-colorama==0.4.4
-comm==0.2.0
-command-not-found==0.3
-contourpy==1.2.0
-cryptography==3.4.8
-css-parser==1.0.7
-cssselect==1.1.0
-cssutils==1.0.2
-cupshelpers==1.0
-cycler==0.11.0
-dash==2.14.2
-dash-core-components==2.0.0
-dash-cytoscape==0.3.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dbus-python==1.2.18
-debugpy==1.8.0
-decorator==4.4.2
-defer==1.0.6
-defusedxml==0.7.1
-dill==0.3.7
-distlib==0.3.6
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-dnspython==2.1.0
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.21.2
-et-xmlfile==1.1.0
-exceptiongroup==1.1.3
-fastjsonschema==2.19.0
-feedparser==6.0.8
-filelock==3.10.0
+annotated-types==0.7.0
+certifi==2025.10.5
+charset-normalizer==3.4.3
+Cython==3.1.4
+docutils==0.22.2
+duckdb==1.4.0
+ffpyplayer==4.5.3
 filetype==1.2.0
-fitbit==0.3.1
-Flask==3.0.0
-fonttools==4.29.1
-fqdn==1.5.1
-fs==2.4.12
-gast==0.5.2
-gensim==4.3.2
-gevent==23.9.1
-greenlet==3.0.2
-h11==0.14.0
-html2text==2020.1.16
-html5-parser==0.4.10
-html5lib==1.1
-httplib2==0.20.2
-idna==3.3
-ifaddr==0.1.7
-importlib-metadata==4.6.4
-interpret==0.5.0
-interpret-core==0.5.0
-ipykernel==6.26.0
-ipython==7.31.1
-ipywidgets==8.1.1
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.18.0
-jeepney==0.7.1
-Jinja2==3.1.2
-joblib==1.3.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.19.2
-jsonschema-specifications==2023.11.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.0
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-jupyter_server==2.10.0
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.8
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.9
-jupyterlab_server==2.25.1
-keyring==23.5.0
+idna==3.10
 Kivy==2.3.1
 Kivy-Garden==0.1.5
-kiwisolver==1.3.2
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-llvmlite==0.41.1
-louis==3.20.0
-lxml==4.8.0
-lz4==3.1.3+dfsg
-macaroonbakery==1.3.1
-Markdown==3.3.6
-MarkupSafe==2.1.2
-matplotlib==3.8.2
-matplotlib-inline==0.1.3
-mechanize==0.4.7
-mistune==3.0.2
-mizani==0.9.3
-more-itertools==8.10.0
-mplsoccer==1.2.4
-mpmath==0.0.0
-msgpack==1.0.3
-multiprocess==0.70.15
-nbclient==0.9.0
-nbconvert==7.11.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
-netifaces==0.11.0
-notebook==7.0.6
-notebook_shim==0.2.3
-numba==0.58.1
-numpy==1.26.2
-oauthlib==3.2.0
-olefile==0.46
-openpyxl==3.1.2
-outcome==1.3.0.post0
-overrides==7.4.0
-packaging==23.0
-pandas==2.2.2
-pandocfilters==1.5.0
-parso==0.8.1
-patsy==0.5.4
-pep517==0.13.0
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.0.1
-platformdirs==3.1.1
-plotly==5.18.0
-plotnine==0.12.4
-ply==3.11
-prometheus-client==0.18.0
-prompt-toolkit==3.0.41
-protobuf==3.12.4
-psutil==5.9.6
-ptyprocess==0.7.0
-py7zr==0.11.3+dfsg
-pycairo==1.20.1
-pychm==0.8.6
-pycparser==2.21
-pycryptodomex==3.11.0
-pycups==2.0.1
-Pygments==2.11.2
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pyproject_hooks==1.0.0
-PyQt5==5.15.6
-PyQt5-sip==12.9.1
-PyQtWebEngine==5.15.5
-pyRFC3339==1.1
-pyrsistent==0.18.1
-PySide2==5.15.2.1
-PySocks==1.7.1
-python-apt==2.4.0+ubuntu4
-python-dateutil==2.8.2
-python-debian==0.1.43+ubuntu1.1
-python-dotenv==0.19.2
-python-json-logger==2.0.7
-pythran==0.10.0
-pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-pyzmq==25.1.1
-qtconsole==5.5.0
-QtPy==2.4.1
-referencing==0.31.0
-regex==2021.11.10
-reportlab==3.6.8
-repoze.lru==0.7
-requests==2.31.0
-requests-oauthlib==1.3.1
-requests-toolbelt==0.9.1
-retrying==1.3.4
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-Routes==2.5.1
-rpds-py==0.12.0
-SALib==1.4.7
-scikit-learn==1.3.2
-scipy==1.15.1
-scour==0.38.2
-screen-resolution-extra==0.0.0
-seaborn==0.13.0
-SecretStorage==3.3.1
-selenium==4.22.0
-Send2Trash==1.8.2
-sgmllib3k==1.0.0
-sh==1.14.3
-shap==0.44.0
-shiboken2==5.15.2.1
-six==1.16.0
-slicer==0.0.7
-smart-open==6.4.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.3.1
-statsmodels==0.14.1
-sympy==1.9
-systemd-python==234
-tenacity==8.2.3
-terminado==0.18.0
-texttable==1.6.4
-threadpoolctl==3.2.0
-tinycss2==1.2.1
-toml==0.10.2
-tomli==2.0.1
-tornado==6.3.3
-tqdm==4.66.1
-traitlets==5.13.0
-trio==0.25.1
-trio-websocket==0.11.1
-types-python-dateutil==2.8.19.14
-typing_extensions==4.12.2
-tzdata==2023.3
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufoLib2==0.13.1
-ufw==0.36.1
-unattended-upgrades==0.1
-unicodedata2==14.0.0
-uri-template==1.3.0
-urllib3==1.26.5
-virtualenv==20.21.0
-wadllib==1.3.6
-wcwidth==0.2.5
-webcolors==1.13
-webencodings==0.5.1
-WebOb==1.8.6
-websocket-client==1.8.0
-Werkzeug==3.0.1
-widgetsnbextension==4.0.9
-wsproto==1.2.0
-xdg==5
-xgboost==2.0.3
-xkit==0.0.0
-zeroconf==0.38.3
-zipp==1.0.0
-zope.event==5.0
-zope.interface==6.1
+numpy==2.3.3
+panda==0.3.1
+pandas==2.3.3
+platformdirs==4.4.0
+pydantic==2.11.10
+pydantic_core==2.33.2
+Pygments==2.19.2
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.3
+requests==2.32.5
+setuptools==80.9.0
+six==1.17.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
