--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,11 @@
 paths:
   db_path: "/home/max/drive/dshs/Creativity/code/lsa-creativity/rating_study/statsbomb_event_data.duckdb"
-  #video_path: "/media/max/Elements/videos_all"
+  
+  # path to external drive on Linux
+  video_path: "/media/max/Elements/videos_events_sample"
+  
+  # path to external drive on macOS
   #video_path: "/Volumes/Elements/videos_all"
-  video_path: "/home/max/drive/dshs/Creativity/code/creativity-rating-app/data/"
+  
+  # dummy videos on localhost max
+  #video_path: "/home/max/drive/dshs/Creativity/code/creativity-rating-app/data/"
