--- a/config.yaml
+++ b/config.yaml
@@ -12,107 +12,8 @@ paths:
 
 settings:
   min_ratings_per_video: 2
-
-# Questionnaire fields configuration
-# Each field can be customized with the following properties:
-# - active: true/false - whether to display this field
-# - type: "multiple_choice", "text", "numeric"
-# - field_name: internal name for storing data (no spaces, lowercase)
-# - title: label/prompt shown to users
-# - options: (for multiple_choice only) list of button labels
-# - hint_text: (for text/numeric only) placeholder text
-# - max_length: (for text only) maximum number of characters
-# - required_for_user_id: true/false - whether this field is used in user ID generation
-questionnaire_fields:
-  - active: true
-    type: "multiple_choice"
-    field_name: "gender"
-    title: "What best describes your gender?"
-    options: ["Female", "Male", "Non-binary", "A gender not listed here"]
-
-  - active: true
-    type: "numeric"
-    field_name: "age"
-    title: ""
-    hint_text: "Enter your age"
-
-  - active: true
-    type: "text"
-    field_name: "nationality"
-    title: ""
-    hint_text: "Enter your nationality"
-
-  - active: true
-    type: "numeric"
-    field_name: "player_exp"
-    title: ""
-    hint_text: "Experience as a player (years)"
-
-  - active: true
-    type: "numeric"
-    field_name: "coach_exp"
-    title: ""
-    hint_text: "Experience as a coach (years)"
-
-  - active: true
-    type: "numeric"
-    field_name: "watch_exp"
-    title: ""
-    hint_text: "Experience regularly watching soccer (years)"
-
-  - active: true
-    type: "multiple_choice"
-    field_name: "license"
-    title: "Coaching License:"
-    options: ["None", "B", "A", "Pro"]
-
-  # User ID generation fields
-  - active: true
-    type: "text"
-    field_name: "mother_initials"
-    title: ""
-    hint_text: "First two letters of mother's given name"
-    max_length: 2
-    required_for_user_id: true
-
-  - active: true
-    type: "text"
-    field_name: "father_initials"
-    title: "" 
-    hint_text: "First two letters of father's given name"
-    max_length: 2
-    required_for_user_id: true
-
-  - active: true
-    type: "numeric"
-    field_name: "siblings"
-    title: ""
-    hint_text: "Number of siblings"
-    required_for_user_id: true
-
-  - active: true
-    type: "numeric"
-    field_name: "birth_day"
-    title: "Birthday:"
-    hint_text: "Day"
-    required_for_user_id: true
-    group: "birthday"
-
-  - active: true
-    type: "numeric"
-    field_name: "birth_month"
-    title: ""
-    hint_text: "Month"
-    required_for_user_id: true
-    group: "birthday"
-
-  - active: true
-    type: "numeric"
-    field_name: "birth_year"
-    title: ""
-    hint_text: "Year"
-    required_for_user_id: true
-    group: "birthday"
+  questionnaire_fields_file: "questionnaire_fields.yaml"  # External file for questionnaire configuration
+  rating_scales_file: "rating_scales.yaml"  # External file for rating scales configuration
 
 # Screen layout proportions for VideoPlayerScreen
 # These values control the relative heights of different sections (must sum to 1.0)
@@ -122,93 +23,3 @@ screen_dimensions:
   video_player_height: 0.46        # Video player and pitch visualization area
   control_buttons_height: 0.08     # Bottom control buttons row
   rating_scales_height: 0.38       # Rating scales section
-
-# Rating scales configuration
-# Each scale can be customized with the following properties:
-# - active: true/false - whether to display this scale
-# - type: "discrete", "slider", or "text"
-# - title: the name of the scale shown to users
-# - label_low: label shown at the low end of the scale
-# - label_high: label shown at the high end of the scale
-# - values: (for discrete type only) list of discrete values to display [e.g., [1,2,3,4,5,6,7] or [-2,-1,0,1,2]]
-# - slider_min: (for slider type only) minimum value of the slider
-# - slider_max: (for slider type only) maximum value of the slider
-# - required_to_proceed: true/false - whether user must provide input for this scale to proceed (default: true)
-#   Note: When "action not recognized" is pressed, all scales become optional
-rating_scales:
-  - active: true
-    type: "discrete"
-    title: "Creativity"
-    label_low: "not creative"
-    label_high: "very creative"
-    values: [1, 2, 3, 4, 5, 6, 7]
-    required_to_proceed: true
-
-  - active: true
-    type: "discrete"
-    title: "Technical Correctness"
-    label_low: "very low"
-    label_high: "very high"
-    values: [1, 2, 3, 4, 5, 6, 7]
-    required_to_proceed: true
-
-  - active: true
-    type: "discrete"
-    title: "Aesthetic Appeal"
-    label_low: "not appealing"
-    label_high: "very appealing"
-    values: [1, 2, 3, 4, 5, 6, 7]
-    required_to_proceed: true
-
-  # Example of a slider scale (inactive by default)
-  # Uncomment to add a slider scale from 0-100
-  - active: true
-    type: "slider"
-    title: "Overall Quality"
-    label_low: "poor"
-    label_high: "excellent"
-    slider_min: 0
-    slider_max: 100
-    required_to_proceed: false
-
-  # Example of a text input scale (inactive by default)
-  # Uncomment to add a free-text comments field
-  #- active: true
-  #  type: "text"
-  #  title: "Comments"
-  #  label_low: ""
-  #  label_high: ""
-
-  # Example of a 5-point discrete scale (inactive by default)
-  - active: false
-    type: "text"
-    title: "Open Comment"
-    label_low: ""
-    label_high: ""
-    #values: [1, 2, 3, 4, 5, 6, 7, 8]
-
-  # Example of a discrete scale with custom labels (e.g., -2 to +2)
-  - active: false
-    type: "slider"
-    title: "Confidence"
-    label_low: "0%"
-    label_high: "100%"
-    slider_min: 0
-    slider_max: 1
-
-  # Example of a percentage slider (0-1)
-  - active: false
-    type: "slider"
-    title: "Random"
-    label_low: "0%"
-    label_high: "100%"
-    slider_min: 0
-    slider_max: 1
-
-  - active: false
-    type: "slider"
-    title: "Random"
-    label_low: "0%"
-    label_high: "100%"
-    slider_min: 0
-    slider_max: 1
