--- a/config/questionnaire_fields.yaml
+++ b/config/questionnaire_fields.yaml
@@ -71,7 +71,7 @@
 - active: true
   type: "numeric"
   field_name: "siblings"
-  title: ""anf 
+  title: ""
   hint_text: "Number of siblings"
   required_for_user_id: true
 
